# claude-code-test-runner

./: .env.example  .gitignore  ADDITIONAL_SECURITY_FINDINGS.md  ARCHITECTURE.md  AUTH-UAT-FINAL-REPORT.md  AUTH-UAT-REPORT.md  AUTH-UAT.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  BROWSER_TEST_REPORT.md  CLAUDE.md  COMPLETE_SECURITY_ASSESSMENT.md  COMPREHENSIVE_SECURITY_AUDIT.md  CRITICAL_SECURITY_FLAWS.md  EXECUTIVE_SUMMARY.md  EXTRA_SECURITY_FINDINGS.md  FINAL_ROUND_SECURITY_AUDIT.md  FINAL_SECURITY_AUDIT_COMPREHENSIVE.md  FINAL_SUMMARY.md  FRONTEND_ROUTING_FIXED.md  IMMEDIATE_ACTION_REQUIRED.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SECURITY_AUDIT.md  INTEGRATION_TEST_REPORT.md  QA-TEST-FIXES.md  QA-TEST-REPORT.md  README.md  ROUND_10_THREAT_MODELING_ATTACK_VECTORS.md  ROUND_11_RUNTIME_SECURITY_AUDIT.md  ROUND_12_PERFORMANCE_CONTAINER_SECURITY.md  ROUND_13_FRONTEND_THIRD_PARTY_SECURITY.md  ROUND_8_FINAL_AUDIT.md  ROUND_9_SECURITY_AUDIT_NEW_DIMENSIONS.md  SECURITY_AUDIT_118_VULNERABILITIES_FINAL.md  SECURITY_AUDIT_FINAL_SUMMARY.md  SECURITY_AUDIT_MASTER_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_FINAL.md  SECURITY_AUDIT_ROUND15_FINAL.md  SECURITY_TOOLS.md  SECURITY_TOOLS_INTEGRATION.md  (+12 more)
service/auth-service/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt
service/auth-service/alembic/: env.py
service/auth-service/alembic/versions/: 001_initial_schema.py  002_indexes.py  003_triggers.py
service/auth-service/app/: main.py
service/auth-service/app/core/: celery_app.py  config.py  database.py  logging.py  (+3 more)
(+523 files in other folders)
